# website_scanner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: cookies.py  crawler.py  helpers.py  runner.py  security.py
